--- a/sass/partials/_typography.scss
+++ b/sass/partials/_typography.scss
@@ -1,7 +1,5 @@
-$font-primary: "open sans", sans-serif;
-$font-nav: 'Archivo Narrow', sans-serif;
-
 h1 {
     text-align: center;
     font-family: $font-primary;
+    margin-top: 2rem;
 }
