--- a/css/style.css
+++ b/css/style.css
@@ -1,23 +1,98 @@
 h1 {
   text-align: center;
   font-family: "open sans", sans-serif;
+  margin-top: 2rem;
+}
+
+.navbar-brand {
+  font-size: 36px;
+  font-family: "open sans", sans-serif;
+}
+
+.navbar {
+  background-color: #f4f3ee !important;
+}
+
+.navbar-light .navbar-nav .active > .nav-link {
+  color: #c32c72;
+}
+
+.collapse {
+  z-index: 1;
 }
 
 .navbar-toggler {
   border: none;
 }
 
-.col-md {
-  border: 1px solid black;
+body {
+  background: #e5e5e5;
+}
+
+.square {
+  border: none;
   border-radius: 8%;
-  width: 18rem;
+  width: 15rem;
+  height: 15rem;
   margin: 15px auto;
-  height: 18rem;
+  background: #f4f3ee;
   -webkit-box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.1);
           box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.1);
 }
 
+.square.bordered {
+  background-color: white;
+  border: 2px solid #c32c72;
+}
+
+.square.filled {
+  background-color: #c32c72;
+  border: 2px solid white;
+}
+
 footer {
-  background: #f4f3ee;
+  background-color: white;
+  color: #463f3a;
+  position: relative;
+  bottom: 0px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  height: 70px;
+  margin-top: 100px;
+}
+
+footer span {
+  font-size: 12px;
+  font-weight: 600;
+}
+
+@media (min-width: 768px) {
+  footer {
+    width: 100%;
+    margin: 100px auto 0px auto;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+  footer span {
+    margin: auto 4rem;
+  }
 }
 /*# sourceMappingURL=style.css.map */
