--- a/sass/partials/_base.scss
+++ b/sass/partials/_base.scss
@@ -1,10 +1,27 @@
+body {
+    background: getColour(bg-grey); 
+}
 
 
-.col-md {
-    border: 1px solid black;
+
+
+.square {
+    border: none;
     border-radius: 8%;
-    width: 18rem;
+    width: 15rem;
+    height: 15rem;
     margin: 15px auto;
-    height: 18rem;
-    box-shadow: 0px 6px 12px rgba($color: #000000, $alpha: .1)
+    background: getColour(primary-grey);
+    box-shadow: 0px 6px 12px rgba($color: #000000, $alpha: .1);
+
+
+    &.bordered {
+        background-color: white;
+        border: 2px solid getColour(pinky);
+    }
+
+    &.filled {
+        background-color: getColour(pinky);
+        border: 2px solid white;
+    }
 }
