--- a/sass/partials/_footer.scss
+++ b/sass/partials/_footer.scss
@@ -1,3 +1,32 @@
 footer {
-    background: getColour(primary-grey);
+    background-color: white;
+    color: getColour(headings-dark);
+    position: relative;
+    bottom: 0px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    height: 70px;
+    margin-top: 100px;
+
+    & span {
+        font-size: 12px;
+        font-weight: 600;
+    }
+}
+
+
+@media (min-width: $tablet-width) {
+    footer {
+        width: 100%;
+        margin: 100px auto 0px auto;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+
+        & span {
+            margin: auto 4rem;
+        }
+    }
 }
