--- a/sass/partials/_variables.scss
+++ b/sass/partials/_variables.scss
@@ -1,3 +1,7 @@
+$tablet-width: 768px;
+$font-primary: "open sans", sans-serif;
+$font-nav: 'Archivo Narrow', sans-serif;
+
 $colours: (
     bg-grey: #e5e5e5,
     details-grey: #8d8d8d,
