--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 h1 {
   text-align: center;
   font-family: "open sans", sans-serif;
-  margin-top: 2rem;
+  margin-top: 7rem;
 }
 
 .navbar-brand {
@@ -11,14 +11,14 @@ h1 {
 
 .navbar {
   background-color: #f4f3ee !important;
+  position: fixed;
+  width: 100%;
+  top: 0px;
+  z-index: 1;
 }
 
 .navbar-light .navbar-nav .active > .nav-link {
   color: #c32c72;
-}
-
-.collapse {
-  z-index: 1;
 }
 
 .navbar-toggler {
